# resource-management-system

./: .gitignore  .pre-commit-config.yaml  README.md  cleanup.sh  file-creator.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run.sh
.github/workflows/: deploy.yaml
backend/: Dockerfile  README.md  check_db_connection.py  constant.py  main.py  requirements.txt
backend/api/: auth.py
backend/core/: __init__.py  security.py
backend/db/: __init__.py  session.py
backend/models/: __init__.py  user.py
backend/schemas/: __init__.py  auth.py  user.py
backend/utils/: __init__.py  auth_utils.py  helpers.py  jwt_bearer.py
frontend/: .gitignore  _metadata.json  constant.ts  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  componentUtils.tsx  index.css  main.tsx  router.tsx
frontend/src/components/: LandingRedirect.tsx  Layout.tsx  Logo.tsx  ProtectedRoute.tsx  RmsButton.tsx  RmsCard.tsx  RmsInput.tsx  RmsNavbar.tsx  RmsOtpInput.tsx  RmsTable.tsx  ThemeToggle.tsx  index.ts
frontend/src/config/: assets.tsx
frontend/src/context/: AuthContext.tsx  ThemeContext.tsx
frontend/src/hooks/: useTheme.ts
frontend/src/layouts/: AdminLayout.tsx
infra/: DEPLOYMENT_GUIDE.md  cdk.context.json  cdk.json  package-lock.json  package.json
infra/lib/: backend-infra.ts  constant.ts  frontend-infra.ts  infra-stack.ts  rms-app-infra.ts  rms-app-stage-infra.ts
infra/test/: infra.test.ts
react-app/: index.html  package-lock.json  package.json
react-app/src/: App.tsx
(+12 files in other folders)
