[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "resource-management-backend"
version = "0.1.0"
description = "Resource Management System backend for the company (FastAPI + MongoDB)"
authors = ["Vikalp Varshney <vikalpv@starlabcapital.com>"]
readme = "README.md"
packages = [{ include = "backend" }]

# Web API
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }

# Data / validation
pydantic = "^2.8.0"

# MongoDB (driver + ODM)
motor = "^3.5.0"
beanie = "^1.27.0"

# Configuration / env
python-dotenv = "^1.0.0"

# Auth / security
passlib = { extras = ["bcrypt"], version = "^1.7.0" }
python-jose = "^3.3.0"

# HTTP client / integrations
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
black = "^24.0.0"
isort = "^5.13.0"
mypy = "^1.10.0"
ruff = "^0.5.0"
httpx = "^0.27.0"
